insert updated resume. Fix text alignment

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body {
 p {
     text-align: center;
     border: solid;
-    border-color: white;
+    border-color: rgb(247, 247, 247);
+    border-width: 123px;
 }
 
 .container-fluid {
